[tool.poetry]
name = "packtype"
version = "1.2.0"
description = "Packed data structure specifications for multi-language hardware projects"
authors = ["Peter Birch <peter@intuity.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
Mako = "^1.3.0"
rich = "^13.7.0"
ruff = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-runner = "^6.0.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=packtype --cov-branch --cov-report html --cov-report term -x"
testpaths = ["tests"]

[tool.poe.tasks.test]
shell = "poetry run pytest"

[tool.poe.tasks.lint]
shell = "poetry run ruff check packtype"
