[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "packtype"
version = "3.0.2"
description = "Packed data structure specifications for multi-language hardware projects"
authors = ["Peter Birch <peter@intuity.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
click = "^8.1.7"
Mako = "^1.3.0"
rich = "^13.7.0"
typing-extensions = "^4.8.0"
svg-py = "^1.4.3"
ordered-set = "^4.1.0"
lark = "^1.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-runner = "^6.0.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.12.2"
black = "^23.11.0"
cocotb = "^1.9.1"
forastero = "^1.0"
forastero-io = { git = "https://github.com/VyperCore/forastero-io.git" }
pre-commit = "^4.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"
mkdocstrings = {extras = ["python"], version = "^0.29.0"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
norecursedirs = ["resources"]
addopts = [
    "--cov=packtype",
    "--cov-branch",
    "--cov-report=html",
    "--cov-report=term",
    "-x",
    "--import-mode=importlib",
]

[tool.poe.tasks.test]
shell = "poetry run pytest"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "B", "UP", "N", "W", "I", "A", "C4", "PTH", "RUF", "T"]
ignore = [
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF100", # Unused `noqa` directive
]
